# NAO6-Research

myfirstexample/: CMakeLists.txt  main.cpp  qiproject.xml
myfirstexample/build-myconfig/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake  qitest.cmake
myfirstexample/build-myconfig/sdk/: qitest.json
myfirstexample/build-myconfig/sdk/share/qi/: path.conf
